Middleware do errors refatorado e ainda com erro
