# src/modules/cars/useCases/createCar/CreateCarController.ts
@@ -1,0 +1,33 @@
+import { Request, Response } from 'express';
+import { container } from 'tsyringe';
+
+import { CreateCarUseCase } from './CreateCarUseCase';
+
+class CreateCarController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const {
+      name,
+      description,
+      brand,
+      license_plate,
+      daily_rate,
+      fine_amount,
+      category_id,
+    } = request.body;
+    const createCarUseCase = container.resolve(CreateCarUseCase);
+
+    const car = await createCarUseCase.execute({
+      name,
+      description,
+      brand,
+      license_plate,
+      daily_rate,
+      fine_amount,
+      category_id,
+    });
+
+    return response.status(201).json(car);
+  }
+}
+
+export { CreateCarController };
