# src/shared/infra/http/routes/cars.routes.ts
@@ -1,0 +1,15 @@
+import { CreateCarController } from '@modules/cars/useCases/createCar/CreateCarController';
+import { Router } from 'express';
+
+import { ensureAdmin } from '../middlewares/ensureAdmin';
+import { ensureAuthenticated } from '../middlewares/ensureAuthenticated';
+
+const carsRoutes = Router();
+const createCarController = new CreateCarController();
+
+carsRoutes.use(ensureAuthenticated);
+carsRoutes.use(ensureAdmin);
+
+carsRoutes.post('/', createCarController.handle);
+
+export { carsRoutes };
